--- a/ABCFoodCatering/appsettings.json
+++ b/ABCFoodCatering/appsettings.json
@@ -6,6 +6,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=OrderDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ABCFoodCateringDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "UserSettings": {
+    "UserEmail": "User@email.com",
+    "UserPassword": "P@ssw0rd"
   }
 }
