Changed appsettings.json user for testing

--- a/ABCFoodCatering/appsettings.json
+++ b/ABCFoodCatering/appsettings.json
@@ -9,7 +9,7 @@
     "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ABCFoodCateringDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "UserSettings": {
-    "UserEmail": "User@email.com",
+    "UserEmail": "Administrator@email.com",
     "UserPassword": "P@ssw0rd"
   }
 }
