Fixed the 401 error i think

--- a/ABCFoodCatering/appsettings.json
+++ b/ABCFoodCatering/appsettings.json
@@ -9,7 +9,9 @@
     "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ABCFoodCateringDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "UserSettings": {
-    "UserEmail": "Administrator@email.com",
-    "UserPassword": "P@ssw0rd"
+    "ClientEmail": "User@email.com",
+    "ClientPassword": "P@ssw0rd123",
+    "AdminEmail": "Admin@email.com",
+    "AdminPassword":  "P@ssw0rd"
   }
 }
