--- a/ABCFoodCatering/appsettings.json
+++ b/ABCFoodCatering/appsettings.json
@@ -6,6 +6,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=OrderDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=OrderDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ÜserSettings": {
+    "UserName": "ClientUser1",
+    "UserEmail": "ClientUs7er@email.com",
+    "UserPassword": "Password"
   }
 }
