Re did the ENTIRE database

--- a/ABCFoodCatering/appsettings.json
+++ b/ABCFoodCatering/appsettings.json
@@ -13,7 +13,9 @@
     "MemberEmail": "Member@email.com",
     "MemberPassword": "P@ssword456",
     "ClientEmail": "Client@email.com",
-    "ClientPassword": "P@ssw0rd123"
+    "ClientPassword": "P@ssw0rd123",
+    "AdminEmail": "Admin@gmail.com",
+    "AdminPassword": "P@ssw0rd123"
   },
   "JwtSettings": {
     "Issuer": "https://localhost:44352/",
